.helm/templates/0-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hleb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hlebauhus.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
